# nebulink

./: .gitignore  README.md
backend/: .flake8  .gitignore  lint.sh  main.py  mypy.ini  private_keys.json  pyproject.toml  requirements.txt  sql_app.db
backend/app/agents/: classifier.py  company_query_optimizer.py  github_scraper_agent_helper.py  linkedin_scraper_agent_helper.py  other_query_optimizer.py  scraper_agents.py  search_communication.py  update_chroma.py
backend/app/api/routes/: auth.py  github.py  linkedin.py  message.py  network.py  search.py
backend/app/chromadb/: __init__.py  dataclass.py  internal_api.py
backend/app/core/: config.py
backend/app/db/: database.py  github_user_functions.py  linkedin_organization_functions.py  linkedin_user_functions.py  repository_functions.py  session.py  user_functions.py
backend/app/models/: __init__.py  github_user.py  linkedin_organization.py  linkedin_user.py  repository.py  user.py
backend/app/schemas/: __init__.py  github_user.py  linkedin_organization.py  linkedin_user.py  message.py  repository.py  search.py  user.py
backend/app/search/: classifier_agent.py  gemini_agent.py  main_search.py
backend/app/utils/: enums.py  github_scraper.py  linkedin_scraper.py  security.py
backend/persistent_chroma_client/: chroma.sqlite3
backend/scripts/: migrate_to_singlestore.py
frontend/: package-lock.json  package.json  rand.json
frontend/public/dummy_data/: dummy_nodes.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx  SearchBox.tsx  (+3 more)
(+3 files in other folders)
